ci: 拷贝文件夹所有目录[test]

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,8 @@ jobs:
       - name: copy file 
         uses: appleboy/scp-action@master
         with:
-          host: 111.231.137.202
+          host: ${{ secrets.HOST }}
           username: root
           key: ${{ secrets.KEY }}
-          source: "dist/"
+          source: "dist/*"
           target: "/soonspacejs-test-docs/"
