--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,3 +39,4 @@ jobs:
           key: ${{ secrets.KEY }}
           source: "dist/*"
           target: "/soonspacejs-test-docs/"
+          strip_components: 1
