perf: offLineInstructions file build

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "soonspacejs-docs",
   "scripts": {
     "dev": "vuepress dev .",
-    "build": "vuepress build ."
+    "build": "vuepress build .",
+    "build:offLine": "node ./offLineInstructions/index.js"
   },
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.8.2",
     "vuepress": "^1.8.2",
-    "vuepress-plugin-baidu-tongji-analytics": "^1.0.2"
+    "vuepress-plugin-baidu-tongji-analytics": "^1.0.2",
+    "pdf-merger-js": "^3.1.0"
   }
 }
