--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "1.8.2",
+    "pdf-merger-js": "3.1.0",
     "vuepress": "1.8.2",
-    "vuepress-plugin-baidu-tongji-analytics": "1.0.2",
-    "pdf-merger-js": "3.1.0"
+    "vuepress-plugin-baidu-tongji-analytics": "1.0.2"
   }
 }
