--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,3 +40,4 @@ jobs:
           source: "dist,!dist/resource"
           target: "/mnt/soonspacejs"
           strip_components: 1
+          timeout: 120s
