--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "scripts": {
     "dev": "vitepress dev ./",
     "build": "vitepress build ./",
+    "preview": "vitepress preview ./", 
     "build:offLine": "node ./offLineInstructions/index.js"
   },
   "devDependencies": {
-    "@vuepress/plugin-back-to-top": "1.8.2",
-    "@vuepress/plugin-pwa": "^1.8.2",
     "pdf-merger-js": "3.1.0",
-    "vitepress": "latest",
-    "vuepress": "1.8.2",
-    "vuepress-plugin-baidu-tongji-analytics": "1.0.2"
+    "stylus": "^0.62.0",
+    "vitepress": "latest"
   }
 }
