--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,9 +33,11 @@ jobs:
         name: Install pnpm
         with:
           version: 8
-        
-      - run: pnpm install
-      - run: npm run build
+      
+      - name: Install dependencies
+        run: pnpm install
+      - name: Build
+        run: npm run build
 
         name: copy file 
         uses: appleboy/scp-action@master
