--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build
         run: npm run build
 
-        name: copy file 
+      - name: copy file 
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
