--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -33,6 +33,8 @@ jobs:
         with:
           fetch-depth: 0 # 如果未启用 lastUpdated，则不需要
       - uses: pnpm/action-setup@v3
+        with:
+          version: 9
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
